--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Phone Shop</string>
     <string name="Price">1399$</string>
     <string name="Brand_Name">IPhone 11 pro max</string>
+    <string name="title_activity_new">NewActivity</string>
 </resources>
